--- a/app/src/main/res/layout/init_fragment.xml
+++ b/app/src/main/res/layout/init_fragment.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
+
     <data>
+
         <variable
             name="initViewModel"
             type="com.example.kobilapp.viewModel.InitViewModel" />
+
         <variable
             name="view"
             type="android.view.View" />
@@ -18,12 +21,25 @@
         android:layout_height="match_parent"
         android:background="@color/colorPrimaryDark">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_gravity="center"
+            android:backgroundTint="@color/white"
+            android:text="@string/bank"
+            android:textColor="@color/white"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            app:drawableStartCompat="@drawable/icon_bank"
+            app:drawableTint="@color/white" />
+
         <ProgressBar
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_gravity="bottom"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:layout_marginBottom="30dp"
             android:visibility="@{initViewModel.progressBarVisibility?view.VISIBLE:view.GONE}"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -32,7 +48,7 @@
 
         <Button
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_gravity="bottom"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
