--- a/app/src/main/res/layout/pincode_fragment.xml
+++ b/app/src/main/res/layout/pincode_fragment.xml
@@ -31,9 +31,9 @@
             android:id="@+id/cardView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="20dp"
             android:elevation="30dp"
             app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="5dp"
@@ -49,6 +49,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:orientation="vertical"
                 android:padding="30dp">
 
@@ -59,14 +60,16 @@
 
                     <LinearLayout
                         android:id="@+id/linearLayoutIconUser"
-                        android:layout_width="50dp"
-                        android:layout_height="match_parent"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
                         android:gravity="center"
-                        android:padding="12dp"
+                        android:padding="8dp"
                         app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/editTextUsername"
+                        app:layout_constraintHorizontal_bias="1.0"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.0">
+                        app:layout_constraintVertical_bias="0.035">
 
                         <ImageView
                             android:layout_width="match_parent"
@@ -81,13 +84,16 @@
                         android:layout_height="match_parent"
                         android:layout_marginStart="50dp"
                         android:afterTextChanged="@{pinCodeViewModel.afterPinTextChanged}"
+                        android:backgroundTint="@color/black"
                         android:hint="Enter pin"
-                        android:textColorHint="@color/light_black"
-                        android:textColor="@color/black"
-                        android:inputType="number"
+                        android:inputType="numberPassword"
                         android:maxLength="8"
+                        android:maxLines="1"
                         android:onTextChanged="@{pinCodeViewModel.onPinTextChanged}"
                         android:text="@={pinCodeViewModel.pin}"
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/light_black"
+                        android:textSize="13dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -128,11 +134,13 @@
                     android:orientation="horizontal">
 
                     <LinearLayout
-                        android:layout_width="50dp"
-                        android:layout_height="match_parent"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
                         android:gravity="center"
-                        android:padding="12dp"
+                        android:padding="8dp"
                         app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/editTextActivationCode"
+                        app:layout_constraintHorizontal_bias="1.0"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.0">
@@ -149,14 +157,17 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="50dp"
+                        android:backgroundTint="@color/black"
                         android:hint="Confirm pin"
                         android:inputType="number"
-                        android:textColorHint="@color/light_black"
-                        android:textColor="@color/black"
                         android:maxLength="8"
+                        android:maxLines="1"
                         android:onTextChanged="@{pinCodeViewModel.onConfirmPinTextChanged}"
                         android:password="true"
                         android:text="@={pinCodeViewModel.confirmPin}"
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/light_black"
+                        android:textSize="13sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -168,7 +179,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="55dp"
                         android:text="@{pinCodeViewModel.confirmPinError}"
-                        android:textColor="@color/red"
+                        android:textColor="@color/black"
                         android:textSize="10sp"
                         android:visibility="@{pinCodeViewModel.confirmPinErrorVisibility ?view.VISIBLE:view.GONE}"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -180,10 +191,11 @@
 
         <Button
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="14dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="25dp"
             android:layout_marginTop="15dp"
-            android:layout_marginEnd="14dp"
+            android:layout_marginEnd="25dp"
+            android:background="@color/colorPrimary"
             android:elevation="20dp"
             android:onClick="@{(v)->pinCodeViewModel.onSetPinClick(v)}"
             android:text="Activate"
