--- a/app/src/main/res/layout/list_view_users.xml
+++ b/app/src/main/res/layout/list_view_users.xml
@@ -18,12 +18,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardBackgroundColor="@color/white"
-        app:cardCornerRadius="20dp"
+        app:cardCornerRadius="5dp"
+        android:elevation="20dp"
         app:cardElevation="5dp"
-        app:cardMaxElevation="2dp"
         app:cardPreventCornerOverlap="true"
-        app:cardUseCompatPadding="true"
-        app:circularflow_defaultRadius="10dp">
+        app:cardUseCompatPadding="true">
 
         <RelativeLayout
             android:layout_width="match_parent"
