--- a/app/src/main/res/layout/pincode_fragment.xml
+++ b/app/src/main/res/layout/pincode_fragment.xml
@@ -17,12 +17,53 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         tools:context=".fragment.ActivationFragment">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@color/colorPrimary"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <LinearLayout
+                android:id="@+id/linearLayoutMenu"
+                android:layout_width="50dp"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:onClick="@{(v)->pinCodeViewModel.onBackClick(v)}"
+                android:padding="10dp">
+
+                <ImageView
+                    android:id="@+id/imageViewMenu"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/icon_back"
+                    android:backgroundTint="@color/white" />
+            </LinearLayout>
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:backgroundTint="@color/white"
+                android:text="@string/bank"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:drawableStartCompat="@drawable/icon_bank"
+                app:drawableTint="@color/white" />
+
+        </RelativeLayout>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="80dp"
             android:background="@color/colorPrimary"
+            android:layout_marginTop="50dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -32,7 +73,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="80dp"
             android:layout_marginEnd="20dp"
             android:elevation="30dp"
             app:cardBackgroundColor="@color/white"
@@ -93,7 +134,7 @@
                         android:text="@={pinCodeViewModel.pin}"
                         android:textColor="@color/black"
                         android:textColorHint="@color/light_black"
-                        android:textSize="13dp"
+                        android:textSize="15dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -167,7 +208,7 @@
                         android:text="@={pinCodeViewModel.confirmPin}"
                         android:textColor="@color/black"
                         android:textColorHint="@color/light_black"
-                        android:textSize="13sp"
+                        android:textSize="15sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -197,6 +238,7 @@
             android:layout_marginEnd="25dp"
             android:background="@color/colorPrimary"
             android:elevation="20dp"
+            android:shadowRadius="30"
             android:onClick="@{(v)->pinCodeViewModel.onSetPinClick(v)}"
             android:text="Activate"
             app:cardPreventCornerOverlap="true"
