--- a/app/src/main/res/layout/side_menu_fragment.xml
+++ b/app/src/main/res/layout/side_menu_fragment.xml
@@ -291,6 +291,43 @@
                         app:layout_constraintStart_toStartOf="parent"
                         tools:layout_editor_absoluteY="40dp" />
                 </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/linearLayoutLogout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:onClick="@{(v)->sideMenuViewModel.onLogoutClick(v)}"
+                    android:orientation="vertical"
+                    android:visibility="@{sideMenuViewModel.logoutVisibility?view.VISIBLE:view.GONE}">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="10dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="1.0"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Logout"
+                            android:textColor="@color/white"
+                            android:textSize="15sp" />
+
+                    </LinearLayout>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
+                        android:background="@color/white"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        tools:layout_editor_absoluteY="40dp" />
+                </LinearLayout>
             </LinearLayout>
         </FrameLayout>
 
