--- a/app/src/main/res/layout/activation_fragment.xml
+++ b/app/src/main/res/layout/activation_fragment.xml
@@ -76,6 +76,7 @@
                     </LinearLayout>
 
                     <EditText
+                        android:id="@+id/editTextUserName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:backgroundTint="@color/black"
