--- a/app/src/main/res/layout/pincode_fragment.xml
+++ b/app/src/main/res/layout/pincode_fragment.xml
@@ -122,7 +122,7 @@
                     <EditText
                         android:id="@+id/editTextUsername"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_marginStart="50dp"
                         android:afterTextChanged="@{pinCodeViewModel.afterPinTextChanged}"
                         android:backgroundTint="@color/black"
@@ -134,7 +134,7 @@
                         android:text="@={pinCodeViewModel.pin}"
                         android:textColor="@color/black"
                         android:textColorHint="@color/light_black"
-                        android:textSize="15dp"
+                        android:textSize="15sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -194,7 +194,7 @@
                     </LinearLayout>
 
                     <EditText
-                        android:id="@+id/editTextActivationCode"
+                        android:id="@+id/editTextConfirmCode"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="50dp"
@@ -204,7 +204,6 @@
                         android:maxLength="8"
                         android:maxLines="1"
                         android:onTextChanged="@{pinCodeViewModel.onConfirmPinTextChanged}"
-                        android:password="true"
                         android:text="@={pinCodeViewModel.confirmPin}"
                         android:textColor="@color/black"
                         android:textColorHint="@color/light_black"
